# a01-quranic-citation-transformer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
